# bgumodo-dev

./: README.md
bgumodo_arm/: CMakeLists.txt  README.md  package.xml
bgumodo_arm/msg/: ThreePoints.msg  TwoPoints.msg
bgumodo_arm/src/: IK.h  base_pose_calc.cpp  grasping_manipulator.cpp  helperfunctions.h  push_manipulator.cpp  side_grasping_manipulator.cpp  top_grasping_manipulator.cpp  upper_grasping_manipulator.cpp
bgumodo_master/: CMakeLists.txt  package.xml
bgumodo_master/etc/: demo_pick_node.cpp
bgumodo_master/launch/: armadillo_office_demo.launch
bgumodo_nav/: CMakeLists.txt  package.xml
bgumodo_nav/launch/: armadillo_alex.launch  armadillo_gazibo.launch  armadillo_gazibo.launch~  armadillo_moveit_and_nav_alex.launch  armadillo_moveit_and_nav_alex.launch~
bgumodo_nav/maps/: building6.1.yaml  small_office.yaml
bgumodo_nav/nav_config/: costmap_common_params.yaml  costmap_common_params.yaml~  costmap_exploration.yaml  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_params.yaml  move_base_params.yaml~
bgumodo_nav/scripts/: Move.py  Move_test.py  nav_test.py
bgumodo_nav/src/: coffe_demo_nav.cpp
bgumodo_plan/: CMakeLists.txt  package.xml
bgumodo_speech/: CMakeLists.txt  package.xml
bgumodo_vision/: CMakeLists.txt  package.xml
bgumodo_vision/launch/: bgumodo_vision.launch
bgumodo_vision/scripts/: detector_master.py  get_distance_service.py  get_xy_service.py
bgumodo_vision/src/: get_pcl.cpp
bgumodo_vision/srv/: GetDistance.srv  GetXY.srv
(+52 files in other folders)
